src/test/deca/syntax/valid/test_unary_exp.deca
// Description:
//    on teste la règle de unary_exp
//
// Resultats:
//    ok


{ 
  3 * ---3;
  2 + ----!!1;
  1 / --!2;
  1 % !--3;
 }
